--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode development --color --progress",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "predeploy": "yarn build",
+    "deploy": "firebase deploy",
+    "postdeploy": "rimraf ./dist"
   },
-  "author": "",
+  "author": "Philip Sotirov | @fipo",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -22,9 +25,11 @@
   },
   "dependencies": {
     "babel-preset-react": "^6.24.1",
+    "firebase-tools": "^4.0.2",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "rimraf": "^2.6.2",
     "ts-loader": "^4.4.2",
     "typescript": "^3.0.1",
     "webpack-dev-server": "^3.1.4"
