--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "webpack-cli": "^3.0.8"
   },
   "dependencies": {
+    "babel-eslint": "^8.2.6",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^5.3.0",
+    "eslint-loader": "^2.1.0",
+    "eslint-plugin-react": "^7.10.0",
     "firebase-tools": "^4.0.2",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.4.1",
