--- a/package.json
+++ b/package.json
@@ -15,27 +15,25 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
-    "clean-webpack-plugin": "^0.1.19",
-    "html-loader": "^0.5.5",
-    "prettier": "1.14.0",
-    "webpack": "^4.12.2",
-    "webpack-cli": "^3.0.8"
-  },
-  "dependencies": {
-    "babel-eslint": "^8.2.6",
     "babel-preset-react": "^6.24.1",
-    "eslint": "^5.3.0",
+    "clean-webpack-plugin": "^0.1.19",
     "eslint-loader": "^2.1.0",
     "eslint-plugin-react": "^7.10.0",
-    "firebase-tools": "^4.0.2",
+    "eslint": "^5.3.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "prettier": "1.14.0",
     "rimraf": "^2.6.2",
-    "ts-loader": "^4.4.2",
-    "typescript": "^3.0.1",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4",
+    "webpack": "^4.12.2"
+  },
+  "dependencies": {
+    "firebase-tools": "^4.0.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
   }
 }
