fixup! add basic eslint

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,5 +6,5 @@
   },
   "parser": "babel-eslint",
   "plugins": ["react"],
-  "extends": ["eslint:recommended", "plugin:react/recommended"],
+  "extends": ["eslint:recommended", "plugin:react/recommended"]
 }
