--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^1.0.0",
     "eslint": "^5.3.0",
     "eslint-loader": "^2.1.0",
     "eslint-plugin-react": "^7.10.0",
@@ -29,6 +30,7 @@
     "html-webpack-plugin": "^3.2.0",
     "prettier": "1.14.0",
     "rimraf": "^2.6.2",
+    "style-loader": "^0.21.0",
     "webpack": "^4.12.2",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
