--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prestart": "firebase functions:config:get > .firebase-config.json",
-    "start": "webpack-dev-server --mode development --color --progress",
-    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development --color --progress --config webpack.dev.js",
+    "build": "webpack --mode production --color --progress --config webpack.prod.js",
     "predeploy": "yarn build",
     "deploy": "firebase deploy",
     "deploy:functions": "firebase deploy --only functions",
@@ -34,8 +34,10 @@
     "rimraf": "^2.6.2",
     "style-loader": "^0.21.0",
     "webpack": "^4.12.2",
+    "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.4"
   },
   "dependencies": {
     "firebase": "^5.5.8",
