--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "1.14.0",
+    "redux-devtools-extension": "^2.13.5",
     "rimraf": "^2.6.2",
     "style-loader": "^0.21.0",
     "webpack": "^4.12.2",
@@ -44,7 +45,11 @@
   },
   "dependencies": {
     "firebase": "^5.5.8",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   }
 }
