--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "eslint": "^5.3.0",
+    "eslint-config-prettier": "^3.3.0",
     "eslint-loader": "^2.1.0",
+    "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.10.0",
     "handlebars": "^4.0.11",
     "handlebars-loader": "^1.7.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.3.0",
+    "lint-staged": "^8.1.0",
     "prettier": "1.14.0",
     "redux-devtools-extension": "^2.13.5",
     "rimraf": "^2.6.2",
@@ -45,11 +49,24 @@
   },
   "dependencies": {
     "firebase": "^5.5.8",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.1.1",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint 'src/**/*.js' --fix",
+      "git add"
+    ]
   }
 }
