--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-config-prettier": "^3.3.0",
     "eslint-loader": "^2.1.0",
     "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.10.0",
     "handlebars": "^4.0.11",
     "handlebars-loader": "^1.7.0",
