--- a/package.json
+++ b/package.json
@@ -21,31 +21,32 @@
     "@babel/preset-env": "^7.1.5",
     "@babel/preset-react": "^7.0.0",
     "@firebase/app-types": "^0.3.2",
+    "@firebase/util": "^0.2.6",
     "@types/react": "^16.7.3",
-    "babel-eslint": "^8.2.6",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
-    "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.3.0",
-    "eslint-config-prettier": "^3.3.0",
-    "eslint-loader": "^2.1.0",
+    "clean-webpack-plugin": "^1.0.1",
+    "css-loader": "^2.1.0",
+    "eslint": "^5.14.1",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-loader": "^2.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.10.0",
-    "handlebars": "^4.0.11",
+    "handlebars": "^4.1.0",
     "handlebars-loader": "^1.7.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.0",
     "lint-staged": "^8.1.0",
-    "prettier": "1.14.0",
+    "prettier": "1.16.1",
     "redux-devtools-extension": "^2.13.5",
     "rimraf": "^2.6.2",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.12.2",
-    "webpack-bundle-analyzer": "^3.0.3",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.29.5",
+    "webpack-bundle-analyzer": "^3.0.4",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.0",
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
