--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,26 @@
 language: node_js
 node_js:
-- 8.11.4
-branches:
-  only:
-  - master
-  - production
-install:
-- npm install -g firebase-tools
-- cd ./functions && npm i && cd ..
-- yarn install
+  - "8.10"
+cache:
+  yarn: true
+  directories:
+    - node_modules
 script:
-- yarn build
+  - yarn test
+before_deploy:
+  - yarn global add travis-ci-cloudfront-invalidation
+  - yarn build
 deploy:
-  provider: script
-  script: firebase deploy --token $FIREBASE_TOKEN
+  provider: s3
+  access_key_id: $AWS_ACCESS_KEY_ID
+  secret_access_key: $AWS_SECRET_ACCESS_KEY
+  bucket: $S3_BUCKET
   skip_cleanup: true
+  local-dir: dist
+  region: $AWS_REGION
   on:
     branch: production
+after_deploy:
+  - travis-ci-cloudfront-invalidation -a $AWS_ACCESS_KEY_ID -s $AWS_SECRET_ACCESS_KEY -c $CLOUDFRONT_ID -i '/*' -b $TRAVIS_BRANCH -p $TRAVIS_PULL_REQUEST -o 'production'
 notifications:
   slack: vertie:cXYHn7IC3nkmJiPMcW4Kh0xo
